# Robto_2_ARM

./: README.md  pyproject.toml
model_weights/PPO_lift/: PPO_depth.onnx  model_6199.pt  policy.pt
model_weights/PPO_lift/old/: policy_old.onnx
model_weights/PPO_reach/: model_2949_encoder.pt  policy.onnx
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: play.py  train.py
source/panda_train/: setup.py
source/panda_train/config/: extension.toml
source/panda_train/panda_train/: ui_extension_example.py
source/panda_train/panda_train/modules/: custom_runner.py  network.py
source/panda_train/panda_train/tasks/manager_based/: __init__.py
source/panda_train/panda_train/tasks/manager_based/panda_lift/: __init__.py  network.py  panda_train_env_cfg.py
source/panda_train/panda_train/tasks/manager_based/panda_lift/agents/: rl_games_ppo_cfg.yaml  rsl_rl_ppo_cfg.py
source/panda_train/panda_train/tasks/manager_based/panda_lift/mdp/: events.py  rewards.py
source/panda_train/panda_train/tasks/manager_based/panda_lift/usd/: fr3.usd  franka_fr3_cfg.py  read_usd.py
source/panda_train/panda_train/tasks/manager_based/panda_train/: __init__.py  panda_train_env_cfg.py
source/panda_train/panda_train/tasks/manager_based/panda_train/agents/: skrl_ppo_cfg.yaml
